# image-buster

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: image-buster_test.cpp
